Fixed scrolling on mobile

--- a/styles/sidebar.styl
+++ b/styles/sidebar.styl
@@ -97,6 +97,7 @@ body.active
   right: 0
   top: 0
   overflow: scroll
+  -webkit-overflow-scrolling: touch
   transform: translateX(260px)
   transition: all 600ms $easing
 
